# data-analysis-with-polars

./: .env  main.py  pyproject.toml  working_space.ipynb
polars/Files/: Modified_Sample_Superstore.csv  Modified_Sample_Superstore.xlsx  sample_output.csv  sample_output.json
